@@ -1,5 +1,11 @@
 2012-08-05  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
+	* matlab/FileFormatToolbox/scinrrd_index2world.m: (v0.2.1)
+	* matlab/FileFormatToolbox/scinrrd_world2index.m: (v0.2.2)
+
+	- Fix bug. Give coordinates of centre of voxels, instead of left
+	edge.
+
 	* matlab/FiltersToolbox/scinrrd_ndgrid.m: (v0.1.1)
 
 	- Fix bug. Give coordinates of centre of voxels, instead of left
